@@ -389,3 +389,6 @@ Decemberr 19, 2005
 
 
 3.1-pre4
+February 1, 2006
+  - Factor adding a configuration parameter to a CModule in Scriptable SpecTcl
+    into AddParameter member function so extenders can add new parameter types.
